--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -54,7 +54,7 @@ Figure \ref{fig:db-er-model} shows the proposed database schema as ER model. To 
 The schema is organized around a \texttt{Diff} entity linking two \texttt{Document} entities, which represents a (XML-)document containing a model. If these \texttt{Documents} contain two consecutive versions of a model, they are linked with a \texttt{has\_successor} and a \texttt{has\_predecessor} relation. These relations are maintained by \masymos itself, whereby the interlink, created to anchor a diff, is expressed via the \texttt{has\_diff} relation, which can be declared in two roles: \emph{source} and \emph{destination}. I decided to use these terms in order to prevent confusion regarding the time line of the model versions, since \bives also does not discriminate any temporal information.
 These 2-hop relations do not necessarily need to span between two consecutive versions.
 Instead I decided, that for a standard setup it might be less useful to store deltas between every possible combination of versions, since this would consume unreasonable amount of storage.
-Further deltas are concatable, so it does not take any significant computational effort to generate a diff for larger version steps out of consecutive deltas.
+Further deltas can be concatenated, so it does not take any significant computational effort to generate a diff for larger version steps out of consecutive deltas.
 
 Every \texttt{Diff} entity links to one, multiple, or none (in case of an empty delta) \texttt{DiffEntry} entities via the \texttt{has\_entry} relation.  
 A \texttt{DiffEntry} can be either a \texttt{DiffInsert},  \texttt{DiffDelete}, \texttt{DiffMove} or a \texttt{DiffUpdate} entity, following the terms used by \bives \citep{Scharm2015} and \comodi \citep{Scharm2016}.
@@ -63,7 +63,7 @@ Each \texttt{DiffEntry} represents a difference detected by \bives \citep{Scharm
 For instance a \texttt{DiffInsert} links to a \texttt{ModelEntity} of the \emph{destination} with an \texttt{is\_destination} relation.
 In contrast a \texttt{DiffDelete} links to the \emph{source} version with an \texttt{is\_source} relation to a \texttt{ModelEntity}. Whereby \texttt{DiffMove} and \texttt{DiffUpdate} entities use both relations: \texttt{is\_source} to link to the \emph{source}, and \texttt{is\_destination}, to link to the \emph{destination} version.
 
-Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}. Ontology terms are hierarchically structured, but not modeled in this ER model. Those terms are currently only taken from the \comodi ontology \citep{Scharm2016}, to describe the nature of changes (cf. Section \ref{sec:background:onto:comodi}).
+Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}. Ontology terms are hierarchically structured, but not modeled in this ER model. Those terms are currently taken from the \comodi ontology \citep{Scharm2016}, to describe the nature of changes (cf. Section \ref{sec:background:onto:comodi}).
 
 \todo{add table (or similar) of all entities and relations in the appendix}
 \todo{make visible, that ER model is just a sub-ER}
@@ -87,7 +87,7 @@ Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}. Ontology
 \section{The HTTP file server}
 \label{sec:concept:filestorage}
 
-The concept of having a HTTP daemon serving all original model files in the \masymos database, as introduced in Section \ref{sec:concept:sysarchitecture}, was originally developed during my early days as student assistant at the Department of \sysbio and Bioinformatics at the University of Rostock, but was improved in preparation of this work.
+The concept of having a HTTP daemon serving all original model files in the \masymos database, as introduced in Section \ref{sec:concept:sysarchitecture}, was originally developed during work as student assistant at the Department of \sysbio and Bioinformatics at the University of Rostock, but was improved in preparation of this work.
 
 The file structure, created by the \modelcrawler, is organized around the concept of a \texttt{fileId} and a \texttt{versionId}. First one is uniquely identifying one (model) file over time, whereby the \texttt{versionId} has to be unique within the specific history of this file. Together they point to one version of a model and therefore form a primary key.
 When designing this concept, we needed to take special care for the \cellml Model Repository PMR2 (cf. Section \ref{sec:background:modelrepo}), because the \cellml provides an import feature for submodels or unit definition and consequently one model may consist of a lot of different files. In order to not break the import directives, the relative positions of these files need to be recreated. As a result the \texttt{fileId}, represented as URN, is split into 2 parts separated by an explanation mark (\texttt{!}). The first part points to the \emph{workspace} of the model, meaning the folder/git repository containing all relevant files, and is therefore equal for all files belonging into one workspace. The second part indicates the relative position of the file, \emph{within} the workspace.
@@ -96,5 +96,6 @@ In this example \texttt{urn:model} is the prefix, \texttt{models.cellml.org:work
 Given the \texttt{versionId} in above mentioned example would be \texttt{3614b6d39b91d78e0038bbd113814686c316616b}, and assuming the HTTP server is available under the imaginary host \texttt{models.example.org}, the following URL could be used to access the actual file:\\
 \texttt{http://models.example.org/models.cellml.org/workspace/novak\_tyson\_1997/3614b6d39b91d78e0038bbd113814686c316616b/novak\_tyson\_1997.cellml}
 
-Additionally the \modelcrawler also creates \json encoded information files in the root of the workspace path. These files contain information about the origin, the date, and crawled date of each version, to ensure that basic provenance information are also available, if the \masymos database is unavailable.
+Additionally the \modelcrawler also creates files in the root of the workspace path with additional information about the origin, the date, and crawled date of each version.
+The purpose of these \json encoded files is to ensure that basic provenance information are also available, if the \masymos database is unavailable.
 
