added todo for nice(r) conclusion

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -30,7 +30,8 @@ Mentioned information could also be conceived by coupling this project with an e
 Concluding I believe, that the basic design, explored in this thesis, has the potential to help solving the essential problem of reproducibility. The database design lays a solid foundation to increase transparency and therefore reproducibility by allowing users and third party tools to explore the evolution of a model with all external links \masymos already provides. In addition with \comodi-annotations common changes or trends could be detected.
 Further search engines could suggest which version matches best the requirements of the user, instead of only returning the newest version. These requirements may be a specific species or compatibility to a \sedml script or another model.
 
-All in all is this work just as good as the supplied data, therefore it is important to facilitate cooperations and interlink more and more open data.
+%All in all is this work just as good as the supplied data, therefore it is important to facilitate cooperations and interlink more and more open data.
+\todo{add point about not being another bio database/repository}
 
 \todo{find a nice(r) ending?}
 \begin{comment}
