revised result chapter

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -61,8 +61,9 @@
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth,height=0.5\textheight,keepaspectratio]{resources/neo4j-renders/comodi.pdf}
-	\caption{Representation of \comodi in \masymos/\neoj}
+	\caption[Representation of \comodi in \masymos/\neoj]{Representation of \comodi in \masymos/\neoj. For the exact network refer to the documentation Figure \ref{fig:background:onto:comodi}}
 	\label{fig:appendix:neo4j-comodi}
+	\todo{make text larger/more readable?}
 \end{figure}
 
 \chapter{Overview of Node- and Relationship types}
