--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -1387,6 +1387,29 @@ While MathML is human-readable, it is anticipated that, in all but the simplest 
   file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/49M946H3/Scharm et al. - 2014 - The CombineArchiveWeb application – A web based to.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/BD3U9CAA/639v1.html:text/html}
 }
 
+@incollection{Shearer2008,
+  title = {{{HermiT}}: {{A Highly}}-{{Efficient OWL Reasoner}}},
+  volume = {432},
+  abstract = {HermiT is a new OWL reasoner based on a novel ``hyper-
+tableau'' calculus. The new calculus addresses performance problems due
+to nondeterminism and model size\textemdash{}the primary sources of complexity
+in state-of-the-art OWL reasoners. The latter is particularly important
+in practice, and it is achieved in HermiT with an improved blocking
+strategy and and an optimization that tries to reuse existing individuals
+rather than generating new ones. HermiT also incorporates a number of
+other novel optimizations, such as a more efficient approach to handling
+nominals, and various techniques for optimizing ontology classification.
+Our tests show that HermiT is usually much faster than other reasoners
+when classifying complex ontologies, and it is already able to classify a
+number of ontologies which no other reasoner has been able to handle.},
+  timestamp = {2016-11-11T20:57:52Z},
+  booktitle = {{{OWLED}}},
+  author = {Shearer, Rob and Motik, Boris and Horrocks, Ian},
+  year = {2008},
+  pages = {91},
+  file = {smh08HermiT.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/J7V8VA9E/smh08HermiT.pdf:application/pdf}
+}
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
@@ -1403,7 +1426,7 @@ er2009\;Berners-Lee2001\;Berners-Lee2001a\;Shadbolt2006\;Bechhofer2004
 \;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Hussey1976\;Hussey
 1976a\;Spinellis2005a\;OSullivan2009\;Beard2009\;Hucka2003\;Miller2011
 \;Chacon2014\;Cuellar2003\;Bray1998\;Lassila1998\;Carlisle2003\;DeRose
-2010\;Drager2014\;Scharm2014a\;;
+2010\;Drager2014\;Scharm2014a\;Shearer2008\;;
 1 ExplicitGroup:zotero-stuff\;0\;Chemiker\;zotero-null-25\;;
 }
 
