revised results chapter

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -49,7 +49,7 @@
 \label{sec:appendix:simple-demo:v2}
 \lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version2.xml}
 
-\chapter{Render of Delta between a more advanced demo model}
+\chapter[Render of a Delta]{Render of Delta between a more advanced demo model}
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{resources/neo4j-renders/demo-sbml-diff.pdf}
@@ -67,6 +67,7 @@
 \end{figure}
 
 \chapter{Overview of Node- and Relationship types}
+\label{sec:appendix:meta-map}
 \todo{tables are ugly as hell...}
 \todo{write introduction thingy, where these numbers are coming from}
 
