added par about not being another model repo to the discussion

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -30,15 +30,11 @@ To integrate \texttt{Reason} and \texttt{Intention} in the annotations, further 
 Both are a imaginable features for a version of this database project adjusted for the use as personal VCS.
 Mentioned information could also be conceived by coupling this project with an existing VCS like Git or an data sharing platform like SEEK\footnote{\url{http://seek4science.org/}}.
 
-Concluding, I believe, that the basic design investigated in this thesis has the potential to help solving the essential problem of reproducibility. The database design provides a solid foundation to increase transparency and therefore reproducibility. It allows users and third party tools to explore the evolution of a model with all external links \masymos already provides. In addition with \comodi-annotations common changes or trends can be detected.
+In conclusion, I believe, that the basic design investigated in this thesis has the potential to help solving the essential problem of reproducibility. The database design provides a solid foundation to increase transparency and therefore reproducibility. It allows users and third party tools to explore the evolution of a model with all external links \masymos already provides. In addition, \comodi annotations, common changes, or trends can be detected now.
 Further search engines front-ends could suggest which version matches best the requirements of the user, instead of only returning the newest version. These requirements may be a specific species or compatibility to a \sedml script or another model.
 
-At last it is important to point out, that 
+Finally is important to point out, that the investigated concept is not meant to be a new competitive repository for models in \sysbio. In fact it is either meant to be integrated into an existing repository, or to create a meta index linking to existing repositories. Even the file storage (cf. Section \ref{sec:concept:filestorage}) could be neglected, since the main reason for its introduction were difficulties with the link structure of certain repositories. It is for instance not possible to link to a specific version of a model in \emph{BioModels database}, instead a whole release needs to be downloaded. Moreover the database concept does not rely on the proposed file structure, it rather requires stable links to all versions of all models. These links could be also provided by another back-end technology.
 
-%All in all is this work just as good as the supplied data, therefore it is important to facilitate cooperations and interlink more and more open data.
-\todo{add point about not being another bio database/repository}
-
-\todo{find a nice(r) ending?}
 \begin{comment}
 \todo{incorporate former outlook section}
 \begin{itemize}
