adjusting headlines and general 'System Biology' -> 'Systems Biology'

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -83,11 +83,11 @@
 	%\dw{This a is comment from Dagmar}
 	\input{introduction.tex}
 	
-	\chapter{Difference detection and its challenges for Systems Biology Models}
+	\chapter{Difference Detection and its challenges for Models in \sysbio}
 	\chaptermark{Difference detection}
 	\input{background-diff.tex}
 	
-	\chapter{Repositories for System Biological Models}
+	\chapter{Repositories for Models in \sysbio}
 	\input{background-repos.tex}
 	
 	\chapter{Conceptual Architecture}
