--- a/tex/background-diff.tex
+++ b/tex/background-diff.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\section{Data formats for System Biology models}
+\section{Data formats for models in \sysbio}
 	\label{sec:background:formats}
 	
 	At the time this thesis is written, there are two major formats to encode models in \sysbio. With combined over 3237 models in 14439 versions openly available\footnote{\url{http://most.sems.uni-rostock.de/}}, \sbml and \cellml encode a large amount of accessible models in \sysbio.
@@ -30,7 +30,8 @@
 	\end{itemize}
 	\end{comment}
 
-\section{Detecting differences in Version Control Systems}
+\section[Detecting differences in Version Control Systems (VCS)]{Detecting differences in Version Control Systems}
+\sectionmark{Detecting differences in VCS}
 	\label{sec:background:diff}
 	
 	\subsection{Unix Diff}
@@ -163,7 +164,7 @@
 	\end{itemize}
 	\end{comment}
 		
-	\subsection{Challenges traditional VCSs face with Systems Biology models}
+	\subsection{Challenges traditional VCSs face with Models in \sysbio}
 	\label{sec:background:manage-versions:challenges}
 	
 	Even with VCSs being heavily used in most software development projects nowadays, \sysbio struggles to adapt those systems for a variety of reasons.
