--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -1,7 +1,4 @@
 % !TeX spellcheck = en_US
-\todo{concrete, low-level stuff}
-\todo{what was used, version numbers, etc.}
-\todo{pretty short, every subproject gets a section}
 \todo{add figure showing differences of concept and implementation, regarding figure \ref{fig:system-overview}}
 
 \section{\modelcrawler}
@@ -35,7 +32,7 @@
 	\end{itemize}
 	\end{comment}
 
-\section{\masymos diff plugin}
+\section{\masymos Diff plugin}
 	\label{sec:impl:diff}
 	As mentioned above (cf. Section \ref{sec:impl:masymos}) the implementation structure of this project is meant to mimic the one of \masymos. Hence the main logic is implemented in a core, which possibly gets extended by multiple interfaces (cf. Section \ref{sec:impl:rest}).
 	
